--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
 body {
-  background-size: 1000px 12000 px;
-  background-repeat: no-repeat
+  background-size: 1000px 12000px;
+  background-repeat: no-repeat;
 }
