--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
   background: url("https://images.genius.com/9fda81dde5dba59613fdee7dc7467c77.1000x1000x1.jpg");
-  background-size: 2000px 1000px;
-  background-repeat: no-repeat;
+  background-size: 300px 300px;
+  background-repeat: repeat;
 }
