--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,21 @@
-body {
-  background: url("https://images.genius.com/9fda81dde5dba59613fdee7dc7467c77.1000x1000x1.jpg");
-  background-size: 500px 500px;
-  background-repeat: repeat;
-}
+<html>
+   <head>
+      <style>
+      h1 {
+         color: blue;
+         font-size: 28pt;
+      }
+      body {
+          background-image: url("https://images.genius.com/9fda81dde5dba59613fdee7dc7467c77.1000x1000x1.jpg");
+            background-size: 500px 500px;
+            background-repeat: repeat;
+      }
+      </style>
+   </head>
+   <body>
+      <h1>Hello World!!</h1>
+      <p>The paragraph text should be unchanged</p>
+      <h2>I am not blue!</h2>
+      <h1>Hello Again</h1>
+   </body>
+</html>
