--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@
       body {
           background-image: url("https://images.genius.com/9fda81dde5dba59613fdee7dc7467c77.1000x1000x1.jpg");
             background-size: 500px 500px;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
       }
       </style>
    </head>
