--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,8 +7,8 @@
       }
       body {
           background-image: url("https://images.genius.com/9fda81dde5dba59613fdee7dc7467c77.1000x1000x1.jpg");
-            background-size: 500px 500px;
-            background-repeat: repeat;
+            background-size: 1400px 1200px;
+            background-repeat: no-repeat;
       }
       </style>
    </head>
