--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@
             background-repeat: no-repeat;
       }
       <style>
-img src {
+<img src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif">
          position: fixed;
          top: 0px;
          left: 5px
