--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,7 @@
       }
       <style>
 <img src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif">
+         #relatively {
          position: fixed;
          top: 0px;
          left: 5px
