--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ h2 {
       }
 img.rocky {
           height: 300px;
-         
+          width: 300px;
       }
    img#a {
     position: relative;
