--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,12 +15,13 @@ h2 {
 img.rocky {
           height: 200px;
           width: 300px;
+      margin-left: 500px;
   
       }
    img#a {
     position: relative;
     top: 20px;
-    left: 600px;
+    left: 500px;
 }
 
 
