--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,7 @@ h2 {
 img.rocky {
           height: 200px;
           width: 300px;
+      margin-left: 500px;
   
       }
    img#a {
@@ -22,5 +23,4 @@ img.rocky {
     top: 30px;
     left: 200px;
 }
-
 
