--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,3 +23,18 @@ img.rocky {
     top: 40px;
     left: 500px;
 }
+
+<div id="London" class="city">
+  <h2>London</h2>
+  <p>London is the capital of England.</p>
+</div>
+
+<div id="Paris" class="city" style="display:none">
+  <h2>Paris</h2>
+  <p>Paris is the capital of France.</p> 
+</div>
+
+<div id="Tokyo" class="city" style="display:none">
+  <h2>Tokyo</h2>
+  <p>Tokyo is the capital of Japan.</p>
+</div>
