--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ button {
       margin-left: 500px;
             top: -600px;
 }
-demo {
+date() {
       position: relative;
       margin-left: 500px;
             top: -600px;
