--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,4 +28,9 @@ button {
       margin-left: 500px;
             top: -600px;
 }
+h3 {
+      position: relative;
+      margin-left: 300px
+            top -300px;
+}
 
