--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ h3 {
       margin-left: 300px;
       top: -300px;
 }
-square url {
+ul {
       position: relative;
       height: 10px;
       width: 10px;
