--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,8 +31,9 @@ button {
 }
 h3 {
       position: relative;
-      top: -400px;
+      top: -300px;
       margin-left: 500px;
+      color: blue;
 }
         
 
