--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
          font-size: 28pt;
       }
 h2 {
-    position: relative;
+    position: static;
     top: -200px;
 }
       body {
@@ -19,7 +19,7 @@ img.rocky {
   
       }
    img#a {
-    position: relative;
+    position: static;
     top: 40px;
     left: 500px;
 }
@@ -46,7 +46,7 @@ h5 {
       top: -392px;
 }
 h6 {
-      position: relative;
+      position: static;
       top: -800px;
       margin-left: 980px;
 }
