--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ audio{
       position: static;
       margin-left: 500px;
 }
-video {
+iframe {
       position: relative;
       margin-left: 500px;
 }
